<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
          <RadioGroup
              android:layout_width="wrap_content"
              android:id="@+id/rg"
              android:layout_height="wrap_content">
              <RadioButton
                  android:id="@+id/rb1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/onlyForeign" />

              <RadioButton
                  android:id="@+id/rb2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/onlyMongolian" />

              <RadioButton
                  android:id="@+id/rb3"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/both" />
          </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60sp"
                android:orientation="horizontal">
                <Button
                    android:onClick="btnclicked"
                    android:id="@+id/ok"
                    android:layout_width="126sp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="20sp"
                    android:text="@string/ok" />

                <Button
                    android:onClick="btnclicked"
                    android:id="@+id/cancel"
                    android:layout_width="126sp"
                    android:layout_height="50dp"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>